# FastAPI-Template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: config.py  logger.py  main.py
app/db/: core.py  models.py
app/features/v1/controllers/: routes.py
app/features/v1/models/: items.py
app/features/v1/services/: items.py
migrations/: README  README.md  env.py
migrations/versions/: b01830eee300_initail_message.py
